# stats_with_python

./: README.md  pyproject.toml
00_explorando_dados/1_inventario/: README.md  anotacoes.csv
