[tool.poetry]
name = "stats-with-python"
version = "0.1.0"
description = "Me studying Statistics with ChatGPT"
authors = ["André Carvalho <alac1984@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
